Button overflow fixed

--- a/src/styles/components/todo.scss
+++ b/src/styles/components/todo.scss
@@ -62,6 +62,7 @@
     border-bottom-right-radius: var(--border-radius);
 
     @include desktop-below {
+      column-gap: 0;
       justify-content: space-between;
       align-items: flex-start;
     }
